--- a/index.html
+++ b/index.html
@@ -626,6 +626,7 @@
             </div>
 
         </div>
+<iframe src='https://webchat.botframework.com/embed/medibot-lfkyrhk?s=FfE6n3eZZ0Q.flt77AdNLukCCzojmq_w14Dit43O69I_cgtiH2avNxI'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
 
     </div>
