--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About </a></li>
                                     <li>
+                                        <li><a href="medibot.html">MediBot </a></li>
+                                    <li>
                                         <!-- First Tier Drop Down -->
                                         <label for="drop-2" class="toggle">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
                                         <a href="#">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span></a>
